# cpeed

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
conf/: config.hpp.in
include/: AbstractCommand.hpp  AbstractDiskWriter.hpp  Base64.hpp  ChunkedEncoding.hpp  Command.hpp  ConnectionException.hpp  CookieBox.hpp  DefaultDiskWriter.hpp  DiskWriter.hpp  DlAbortException.hpp  DlRetryException.hpp  DownloadCommand.hpp  DownloadEngine.hpp  DownloadMethod.hpp  Exception.hpp  File.hpp  Gflags_modules.hpp  HttpConnection.hpp  HttpDownloadCommand.hpp  HttpInitiateConnectionCommand.hpp  HttpProxyRequestCommand.hpp  HttpProxyResponseCommand.hpp  HttpRequestCommand.hpp  HttpResponseCommand.hpp  InitiateConnectionCommandFactory.hpp  Logger.hpp  Message.hpp  Option.hpp  PreAllocationDiskWriter.hpp  Request.hpp  Segment.hpp  SegmentManager.hpp  SimpleLogger.hpp  SleepCommand.hpp  Socket.hpp  SocketIOException.h  TimeoutException.hpp  TransferEncoding.hpp  Util.hpp  down.h
src/: AbstractCommand.cpp  AbstractDiskWriter.cpp  Base64.cpp  ChunkedEncoding.cpp  CookieBox.cpp  DefaultDiskWriter.cpp  DownloadCommand.cpp  DownloadEngine.cpp  File.cpp  Gflags_modules.cpp  HttpConnection.cpp  HttpDownloadCommand.cpp  HttpInitiateConnectionCommand.cpp  HttpProxyRequestCommand.cpp  HttpProxyResponseCommand.cpp  HttpRequestCommand.cpp  HttpResponseCommand.cpp  InitiateConnectionCommandFactory.cpp  Option.cpp  PreAllocationDiskWriter.cpp  Request.cpp  SegmentManager.cpp  SimpleLogger.cpp  SleepCommand.cpp  Socket.cpp  Util.cpp  down.cpp  main.cpp
test/: CMakeLists.txt  down_test.cpp
test/include/: test.h
